// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`per-dialect compile snapshots > compiles a FULL join on a nullable timestamp key on bigquery 1`] = `
"WITH merge_0_a AS (
SELECT created_at, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT created_at, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a.\`created_at\`, merge_1_b.\`created_at\`) AS \`created_at\`,
       merge_0_a.\`new_organic\` AS \`c0_0\`,
       merge_1_b.\`total_followers\` AS \`c1_0\`
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a.\`created_at\` IS NULL) = (merge_1_b.\`created_at\` IS NULL) AND COALESCE(merge_0_a.\`created_at\`, TIMESTAMP('1970-01-01T00:00:00.000Z')) = COALESCE(merge_1_b.\`created_at\`, TIMESTAMP('1970-01-01T00:00:00.000Z'))
ORDER BY \`created_at\`"
`;

exports[`per-dialect compile snapshots > compiles a FULL join on a nullable timestamp key on databricks 1`] = `
"WITH merge_0_a AS (
SELECT created_at, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT created_at, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a.\`created_at\`, merge_1_b.\`created_at\`) AS \`created_at\`,
       merge_0_a.\`new_organic\` AS \`c0_0\`,
       merge_1_b.\`total_followers\` AS \`c1_0\`
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a.\`created_at\` IS NULL) = (merge_1_b.\`created_at\` IS NULL) AND COALESCE(merge_0_a.\`created_at\`, CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP)) = COALESCE(merge_1_b.\`created_at\`, CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP))
ORDER BY \`created_at\`"
`;

exports[`per-dialect compile snapshots > compiles a FULL join on a nullable timestamp key on postgres 1`] = `
"WITH merge_0_a AS (
SELECT created_at, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT created_at, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."created_at", merge_1_b."created_at") AS "created_at",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."created_at" IS NULL) = (merge_1_b."created_at" IS NULL) AND COALESCE(merge_0_a."created_at", CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP)) = COALESCE(merge_1_b."created_at", CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP))
ORDER BY "created_at""
`;

exports[`per-dialect compile snapshots > compiles a FULL join on a nullable timestamp key on redshift 1`] = `
"WITH merge_0_a AS (
SELECT created_at, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT created_at, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."created_at", merge_1_b."created_at") AS "created_at",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."created_at" IS NULL) = (merge_1_b."created_at" IS NULL) AND COALESCE(merge_0_a."created_at", CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP)) = COALESCE(merge_1_b."created_at", CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP))
ORDER BY "created_at""
`;

exports[`per-dialect compile snapshots > compiles a FULL join on a nullable timestamp key on snowflake 1`] = `
"WITH merge_0_a AS (
SELECT created_at, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT created_at, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."created_at", merge_1_b."created_at") AS "created_at",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."created_at" IS NULL) = (merge_1_b."created_at" IS NULL) AND COALESCE(merge_0_a."created_at", CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP)) = COALESCE(merge_1_b."created_at", CAST('1970-01-01T00:00:00.000Z' AS TIMESTAMP))
ORDER BY "created_at""
`;

exports[`per-dialect compile snapshots > compiles a FULL join on a nullable timestamp key on trino 1`] = `
"WITH merge_0_a AS (
SELECT created_at, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT created_at, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."created_at", merge_1_b."created_at") AS "created_at",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."created_at" IS NULL) = (merge_1_b."created_at" IS NULL) AND COALESCE(merge_0_a."created_at", TIMESTAMP '1970-01-01 00:00:00.000') = COALESCE(merge_1_b."created_at", TIMESTAMP '1970-01-01 00:00:00.000')
ORDER BY "created_at""
`;

exports[`per-dialect compile snapshots > compiles a date-keyed merge on bigquery 1`] = `
"WITH merge_0_a AS (
SELECT order_date, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT order_date, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a.\`order_date\`, merge_1_b.\`order_date\`) AS \`order_date\`,
       merge_0_a.\`new_organic\` AS \`c0_0\`,
       merge_1_b.\`total_followers\` AS \`c1_0\`
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a.\`order_date\` IS NULL) = (merge_1_b.\`order_date\` IS NULL) AND COALESCE(merge_0_a.\`order_date\`, DATE '1970-01-01') = COALESCE(merge_1_b.\`order_date\`, DATE '1970-01-01')
ORDER BY \`order_date\`"
`;

exports[`per-dialect compile snapshots > compiles a date-keyed merge on databricks 1`] = `
"WITH merge_0_a AS (
SELECT order_date, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT order_date, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a.\`order_date\`, merge_1_b.\`order_date\`) AS \`order_date\`,
       merge_0_a.\`new_organic\` AS \`c0_0\`,
       merge_1_b.\`total_followers\` AS \`c1_0\`
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a.\`order_date\` IS NULL) = (merge_1_b.\`order_date\` IS NULL) AND COALESCE(merge_0_a.\`order_date\`, CAST('1970-01-01' AS DATE)) = COALESCE(merge_1_b.\`order_date\`, CAST('1970-01-01' AS DATE))
ORDER BY \`order_date\`"
`;

exports[`per-dialect compile snapshots > compiles a date-keyed merge on postgres 1`] = `
"WITH merge_0_a AS (
SELECT order_date, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT order_date, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."order_date", merge_1_b."order_date") AS "order_date",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."order_date" IS NULL) = (merge_1_b."order_date" IS NULL) AND COALESCE(merge_0_a."order_date", CAST('1970-01-01' AS DATE)) = COALESCE(merge_1_b."order_date", CAST('1970-01-01' AS DATE))
ORDER BY "order_date""
`;

exports[`per-dialect compile snapshots > compiles a date-keyed merge on redshift 1`] = `
"WITH merge_0_a AS (
SELECT order_date, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT order_date, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."order_date", merge_1_b."order_date") AS "order_date",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."order_date" IS NULL) = (merge_1_b."order_date" IS NULL) AND COALESCE(merge_0_a."order_date", CAST('1970-01-01' AS DATE)) = COALESCE(merge_1_b."order_date", CAST('1970-01-01' AS DATE))
ORDER BY "order_date""
`;

exports[`per-dialect compile snapshots > compiles a date-keyed merge on snowflake 1`] = `
"WITH merge_0_a AS (
SELECT order_date, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT order_date, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."order_date", merge_1_b."order_date") AS "order_date",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."order_date" IS NULL) = (merge_1_b."order_date" IS NULL) AND COALESCE(merge_0_a."order_date", CAST('1970-01-01' AS DATE)) = COALESCE(merge_1_b."order_date", CAST('1970-01-01' AS DATE))
ORDER BY "order_date""
`;

exports[`per-dialect compile snapshots > compiles a date-keyed merge on trino 1`] = `
"WITH merge_0_a AS (
SELECT order_date, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT order_date, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(merge_0_a."order_date", merge_1_b."order_date") AS "order_date",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (merge_0_a."order_date" IS NULL) = (merge_1_b."order_date" IS NULL) AND COALESCE(merge_0_a."order_date", DATE '1970-01-01') = COALESCE(merge_1_b."order_date", DATE '1970-01-01')
ORDER BY "order_date""
`;

exports[`per-dialect compile snapshots > compiles a string-keyed merge on bigquery 1`] = `
"WITH merge_0_a AS (
SELECT status, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT status, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(CAST(merge_0_a.\`status\` AS STRING), CAST(merge_1_b.\`status\` AS STRING)) AS \`status\`,
       merge_0_a.\`new_organic\` AS \`c0_0\`,
       merge_1_b.\`total_followers\` AS \`c1_0\`
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (CAST(merge_0_a.\`status\` AS STRING) IS NULL) = (CAST(merge_1_b.\`status\` AS STRING) IS NULL) AND COALESCE(CAST(merge_0_a.\`status\` AS STRING), '') = COALESCE(CAST(merge_1_b.\`status\` AS STRING), '')
ORDER BY \`status\`"
`;

exports[`per-dialect compile snapshots > compiles a string-keyed merge on databricks 1`] = `
"WITH merge_0_a AS (
SELECT status, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT status, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(CAST(merge_0_a.\`status\` AS STRING), CAST(merge_1_b.\`status\` AS STRING)) AS \`status\`,
       merge_0_a.\`new_organic\` AS \`c0_0\`,
       merge_1_b.\`total_followers\` AS \`c1_0\`
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (CAST(merge_0_a.\`status\` AS STRING) IS NULL) = (CAST(merge_1_b.\`status\` AS STRING) IS NULL) AND COALESCE(CAST(merge_0_a.\`status\` AS STRING), '') = COALESCE(CAST(merge_1_b.\`status\` AS STRING), '')
ORDER BY \`status\`"
`;

exports[`per-dialect compile snapshots > compiles a string-keyed merge on postgres 1`] = `
"WITH merge_0_a AS (
SELECT status, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT status, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(CAST(merge_0_a."status" AS VARCHAR), CAST(merge_1_b."status" AS VARCHAR)) AS "status",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (CAST(merge_0_a."status" AS VARCHAR) IS NULL) = (CAST(merge_1_b."status" AS VARCHAR) IS NULL) AND COALESCE(CAST(merge_0_a."status" AS VARCHAR), '') = COALESCE(CAST(merge_1_b."status" AS VARCHAR), '')
ORDER BY "status""
`;

exports[`per-dialect compile snapshots > compiles a string-keyed merge on redshift 1`] = `
"WITH merge_0_a AS (
SELECT status, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT status, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(CAST(merge_0_a."status" AS VARCHAR), CAST(merge_1_b."status" AS VARCHAR)) AS "status",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (CAST(merge_0_a."status" AS VARCHAR) IS NULL) = (CAST(merge_1_b."status" AS VARCHAR) IS NULL) AND COALESCE(CAST(merge_0_a."status" AS VARCHAR), '') = COALESCE(CAST(merge_1_b."status" AS VARCHAR), '')
ORDER BY "status""
`;

exports[`per-dialect compile snapshots > compiles a string-keyed merge on snowflake 1`] = `
"WITH merge_0_a AS (
SELECT status, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT status, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(CAST(merge_0_a."status" AS VARCHAR), CAST(merge_1_b."status" AS VARCHAR)) AS "status",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (CAST(merge_0_a."status" AS VARCHAR) IS NULL) = (CAST(merge_1_b."status" AS VARCHAR) IS NULL) AND COALESCE(CAST(merge_0_a."status" AS VARCHAR), '') = COALESCE(CAST(merge_1_b."status" AS VARCHAR), '')
ORDER BY "status""
`;

exports[`per-dialect compile snapshots > compiles a string-keyed merge on trino 1`] = `
"WITH merge_0_a AS (
SELECT status, 1 AS new_organic FROM followers GROUP BY 1
),
merge_1_b AS (
SELECT status, 2 AS total_followers FROM follower_snapshots GROUP BY 1
)
SELECT COALESCE(CAST(merge_0_a."status" AS VARCHAR), CAST(merge_1_b."status" AS VARCHAR)) AS "status",
       merge_0_a."new_organic" AS "c0_0",
       merge_1_b."total_followers" AS "c1_0"
FROM merge_0_a
FULL OUTER JOIN merge_1_b ON (CAST(merge_0_a."status" AS VARCHAR) IS NULL) = (CAST(merge_1_b."status" AS VARCHAR) IS NULL) AND COALESCE(CAST(merge_0_a."status" AS VARCHAR), '') = COALESCE(CAST(merge_1_b."status" AS VARCHAR), '')
ORDER BY "status""
`;
